fixed contrasts

--- a/lesson3/css/styles.css
+++ b/lesson3/css/styles.css
@@ -17,7 +17,7 @@ nav a:hover
 
 nav a {
     text-decoration: none;
-    color: white;
+    color: black;
 }
 
 nav li {
@@ -31,14 +31,26 @@ h1 {
     font-weight: 900;
     letter-spacing: 2.5px;
     font-size: 2em;
+    line-height: 1em;
+    margin-bottom: 0em;
+
 }
 
+h2{
+    
+    font-family: 'Life Savers', cursive;
+    font-weight: 900;
+    letter-spacing: 2.5px;
+    margin-top: 0em;
+   
+
+}
 
 #logo {
-    height: 75px;
+    height: 150px;
     float: left;
     margin-left: 1em;
-    margin-top: -1em;
+    margin-top: 0em;
     margin-right: 3em;
     
 
@@ -119,7 +131,7 @@ footer, header {
         #logo
         {
             height: 150px;
-            margin-top: -2.7em;
+            margin-top: -.75em;
         }
 
        nav li{
